fix(pages): wrap all pages in Layout fix(Button): add optional link prop for navigating fix(Footer): make global

--- a/src/components/Header/style.module.css
+++ b/src/components/Header/style.module.css
@@ -1,81 +1,3 @@
-/* .root {
-  background: #202934;
-  background-attachment: fixed;
-  background-size: cover;
-  position: relative;
-  min-height: 100vh;
-  margin: 0 auto;
-  z-index: 1;
-}
-
-.root::before {
-  content: '';
-  position: fixed;
-  background: url(../../assets/img/stars.svg);
-  background-attachment: fixed;
-  width: 100%;
-  min-height: 100vh;
-  z-index: -1;
-  animation: stars-move-in 1000ms 300ms forwards;
-  opacity: 0;
-}
-
-@keyframes stars-move-in {
-  from {
-    background-position-y: -100px;
-  }
-  to {
-    opacity: 1;
-    background-position-y: 0;
-  }
-}
-
-.forest {
-  position: absolute;
-  bottom: -300px;
-  left: 0;
-  background: url(../../assets/img/main-bg.png) bottom center repeat-x;
-  background-size: cover;
-  width: 100%;
-  height: 85%;
-  opacity: 0;
-  animation: forest-move-in 1000ms 500ms forwards;
-  border-bottom: 300px solid #202934;
-}
-
-@keyframes forest-move-in {
-  from {
-    background-position-y: 150%;
-  }
-  to {
-    opacity: 1;
-    background-position-y: 100%;
-  }
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: fit-content;
-  position: absolute;
-  top: 25%;
-  left: 50%;
-  opacity: 0;
-  transform: translate(-50%, -50%);
-  animation: text-fade-in 1000ms 800ms forwards;
-}
-
-@keyframes text-fade-in {
-  from {
-    right: 0;
-  }
-  to {
-    opacity: 1;
-    right: 25%;
-  }
-} */
-
 .root {
   background: #202736;
   background: linear-gradient(to bottom, #181d23 0%, #202736 80%);
