--- a/src/components/Layout/style.module.css
+++ b/src/components/Layout/style.module.css
@@ -4,6 +4,7 @@
   clip-path: polygon(0 0, 20% 5%, 100% 0, 100% 100%, 80% 95%, 0 100%);
   z-index: 5;
   background-attachment: fixed;
+  height: calc(100% - 100px);
 }
 
 .root .wrapper {
