--- a/src/index.css
+++ b/src/index.css
@@ -39,8 +39,9 @@
 }
 
 html,
-body {
-  height: 100%;
+body,
+#root {
+  height: 100vh;
 }
 
 body {
